--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,16 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
-    font-family: 'Lato' , sans-serif;
+    font-family: 'Roboto' , sans-serif;
 }
 
 /* Header */
 header {
     background-color: lightcoral;
+}
+
+h1 {
+    font-family: 'Lato' , sans-serif;
 }
 
 /* Main content */
