add hover function to navbar for devices 992px and up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto ;
-    margin-top: 47px;
+    margin-top: 78px;
 }
 
 /* footer */
@@ -113,5 +113,18 @@ footer {
 
     .nav-toggle-label {
         display: none;
+    }
+
+    #logo {
+        font-size: 200%;
+        /*line-height: 75px;*/
+        margin: 0 0.5rem;
+    }
+}
+
+/* Large devices (laptops and desktops, 992px and larger)*/
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
     }
 }
