--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,4 +127,9 @@ footer {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+
+    main {
+        margin-top: 53.59px;
+    }
+
 }
