--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,10 +80,16 @@ nav-toggle-label {
 
 /* Main content */
 main {
-    background-color: lightblue;
     /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto ;
     margin-top: 78px;
+}
+
+/* Hero section*/
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/murmuration.webp") no-repeat center center/cover;
 }
 
 /* footer */
