--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,7 @@ hr {
 #circle-cover-bg {
     background: url("../images/pexels-photo-6152103people.webp") no-repeat top center / cover;
     height: 90vw;
-    width: 90w;
+    width: 90vw;
     margin-bottom: 20px;
     border-radius: 50%;
     max-width: 300px;
@@ -191,6 +191,13 @@ hr {
 
 #avoid li {
     padding: 0 20px; 
+}
+
+#final-image {
+    height: 25vw;
+    width: 100%;
+    background: url("../images/pencils2.webp") no-repeat center center/cover;
+    position: relative;
 }
 
 
