validated both html and css made some changes to html added hidden headings to characteristics and final image and took out br from list and increased margin bottom for li items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,8 @@ hr {
 }
 
 #avoid li {
-    padding: 0 20px; 
+    padding: 0 20px;
+    margin-bottom: 15px; 
 }
 
 #final-image {
@@ -200,6 +201,10 @@ hr {
     width: 100%;
     background: url("../images/pencils2.webp") no-repeat center center/cover;
     position: relative;
+}
+
+.hidden {
+    display: none;
 }
 
 
